--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "element-ui": "^2.15.6",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.6",
+    "mysql": "^2.18.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
@@ -28,5 +34,10 @@
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.14"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": ".eslintrc.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
